@@ -1,7 +1,7 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 1995-1997, 1998  Robert Gentleman and Ross Ihaka
- *  Copyright (C) 1998-2014  The R Core Team.
+ *  Copyright (C) 1998-2017  The R Core Team.
+ *  Copyright (C) 1995-1998  Robert Gentleman and Ross Ihaka
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -272,7 +272,7 @@ static void printNamedIntegerVector(int * x, int n, SEXP * names)
 
 static void printNamedRealVector(double * x, int n, SEXP * names)
     PRINT_N_VECTOR(INI_F_REAL,
-		   Rprintf("%s%*s", 
+		   Rprintf("%s%*s",
 			   EncodeReal0(x[k],w,d,e, OutDec),R_print.gap,""))
 
 #undef INI_F_CPLX
@@ -312,7 +312,8 @@ static void printNamedStringVector(SEXP * x, int n, int quote, SEXP * names)
 
 static void printNamedRawVector(Rbyte * x, int n, SEXP * names)
     PRINT_N_VECTOR(formatRaw(x, n, &w),
-		   Rprintf("%s%*s", EncodeRaw(x[k], ""), R_print.gap,""))
+		   Rprintf("%*s%s%*s", w - 2, "",
+			   EncodeRaw(x[k], ""), R_print.gap,""))
 
 attribute_hidden
 void printNamedVector(SEXP x, SEXP names, int quote, const char *title)
