@@ -3047,18 +3047,26 @@ summary(1L)
 str(I(m <- matrix(pi*1:4, 2)))
 ## did look ugly (because of toString() for numbers) in R <= 3.3.1
 
-## check automatic coercions from double to integer
 
-# these should work due to coercion
+## check automatic coercions from double to integer
+##
+## these should work due to coercion
 sprintf("%d", 1)
 sprintf("%d", NA_real_)
 sprintf("%d", c(1,2))
 sprintf("%d", c(1,NA))
 sprintf("%d", c(NA,1))
-
-# these should fail
+##
+## these should fail
 sprintf("%d", 1.1)
 sprintf("%d", c(1.1,1))
 sprintf("%d", c(1,1.1))
 sprintf("%d", NaN)
 sprintf("%d", c(1,NaN))
+
+
+## formatting of named raws:
+setNames(as.raw(1:3), c("a", "bbbb", "c"))
+## was quite ugly for R <= 3.4.2
+
+
